recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:12: error: not found: value level
  forward(length/level);
                 ^